--- a/blog/package.json
+++ b/blog/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-progressbar": "0.7.2",
     "vue-quill-editor": "2.2.1",
     "vue-resource": "1.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue2-filters": "0.1.9"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
