--- a/blog/package.json
+++ b/blog/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "keen-ui": "1.0.0",
     "vue": "^2.3.3",
     "vue-progressbar": "0.7.2",
     "vue-quill-editor": "2.2.1",
