--- a/blog/package.json
+++ b/blog/package.json
@@ -17,6 +17,7 @@
     "keen-ui": "1.0.0",
     "medium-sdk": "0.0.4",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.1",
     "vue-progressbar": "0.7.2",
     "vue-quill-editor": "2.2.1",
     "vue-resource": "1.3.3",
