--- a/blog/package.json
+++ b/blog/package.json
@@ -18,6 +18,7 @@
     "medium-sdk": "0.0.4",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
+    "vue-i18n": "^7.0.4",
     "vue-progressbar": "0.7.2",
     "vue-quill-editor": "2.2.1",
     "vue-resource": "1.3.3",
